2003/06/19 00:58 pcg

	* Makefile.PL: write a fake Makefile using PREREQ when important
        modules are missing, this ensures auto-installation within CPAN.

2003/06/18 10:48 muppetman

	* Gtk2.pm: catch undefined values to hush warnings

	* xs/GtkMenu.xs, xs/GtkItemFactory.xs: change stack handling to
	avoid attempting to free undef.

2003/06/17 18:21 muppetman

	* gtk2perl.h, xs/GtkObject.xs: push sink functions into Glib, 
	to avoid some problems in which GtkObject created via 
	Glib::Object->new don't have gtk_object_sink called on them.

2003/06/16 22:25 muppetman

	* xs/GdkColor.xs, gtk-demo/drawingarea.pl: not sure how the GBoxed
	change could excite this, but suddenly gdk_color_free is very unhappy
	with the GdkColors created by Gtk2::Gdk::Color->new and ->parse.
	fixed by using gdk_color_copy instead of g_new.  freaky.

2003/06/16 22:21 pcg

        * xs/GtkAdjustment.xs: two minor typoes, found while porting
        gimp-perl to 1.3. Reply to muppetman becomes urgent slowly.

2003/06/16 22:36 joered

	* xs/Gtk2/GtkTextIter.xs: fixed a memory leak. Thanks to
	  muppet for the hint.

2003/06/16 14:31 muppetman

	* xs/GtkStyle.xs, AUTHORS: patch from Tom Hargreaves (hex at freezone 
	dot co dot uk> makes font_desc work correctly.

	* api.pod: nasty typo in example code

	* Gtk2/xs/GdkEvent.xs, Gtk2/xs/GtkWidget.xs: updated to reflect
	changes in Glib-Perl's GBoxed handling.

2003/06/15 17:03 joered

	* xs/Gtk2/GtkTextIter.xs: added binding for gtk_text_iter_copy

2003/06/12 20:27 muppetman

	* xs/GdkScreen.xs, xs/PangoTabs.xs: newly implemented

2003/06/12 18:06 pcg

	* xs/GtkWidget.xs: enable add_events, set/get_extension_events.

2003/06/09 13:49 muppetman

	* xs/GtkClipboard.xs: new stuff; 2.2.x only, so only smoke-tested on
	my end...

2003/06/08 16:40 muppetman

	* api.pod: merged in stuff from the braindump

2003/06/07 18:51 muppetman

	* xs/GtkTreeModel.xs: implemented treemodel->foreach, and some others.
